...
import UIKit
import SnapKit
import Combine

class QuoteCell: UITableViewCell {

    private let quoteLabel: UILabel = {
        let label = UILabel()
        label.numberOfLines = 0
        label.font = UIFont.systemFont(ofSize: 16, weight: .medium)
        label.applyTextTheme()
        return label
    }()
...
